dark mode fixes and minor style cleanup

--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -71,7 +71,7 @@ mat-card {
 
 .search-box input:focus {
     outline: none;
-    border-color: #888;
+    border-color: var(--link-accessible);
 }
 
 .search-box button {
