--- a/src/app/components/tags/tags.component.css
+++ b/src/app/components/tags/tags.component.css
@@ -38,15 +38,14 @@ article h2 a:hover {
 }
 
 .tagged button {
-    background: var(--btn-danger);
-    background: inherit;
+    background: var(--card-bg);
     padding: .5rem 1rem;
-    border: .1rem solid lightgray;
+    border: .1rem solid var(--input-border);
+    color: var(--text-color);
 }
 
 .tagged button:hover {
     cursor: pointer;
-    background: hsl(0, 0%, 13%);
     background: var(--btn-danger);
     color: #fff;
     border: .1rem solid transparent;
